# my-own-coding-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
config/: default.toml
docs/: README.md  agent-loop.md  architecture.md  cli.md  configuration.md  delivery.md  extensions.md  llm.md  prompts.md  sessions.md  skills.md  tools.md  tui.md  web.md
examples/extensions/: commit-guard.md  commit-guard.py  mcp-adapter.md  mcp-adapter.py  plan-mode.md  plan-mode.py  protected-paths.md  protected-paths.py  subagents.md  subagents.py  todo-capture.py
examples/mcp/: echo_stdio_server.py
examples/prompts/: quick-plan.md  review.md  summarize-changes.md
src/agent/: __init__.py  __main__.py  cli.py
tests/: conftest.py  fakes.py  test_feature_agent_loop.py  test_feature_auth_cli.py  test_feature_cli_config.py  test_feature_compaction.py  test_feature_config.py  test_feature_context_loader.py  test_feature_event_stream.py  test_feature_extension_loader.py  test_feature_extensions.py  test_feature_prompt_templates.py  test_feature_skills.py  test_feature_stream_errors.py  test_feature_system_prompt.py  test_feature_templates.py  test_feature_tui_autocomplete.py  test_feature_tui_model_modal.py  test_feature_tui_resume.py  test_feature_tui_status.py  test_llm.py  test_llm_anthropic.py  test_llm_openai.py  test_llm_openai_codex.py  test_llm_openai_compatible.py  test_session.py
tests/config/: test_config_behavior.py
tests/core/: test_agent_extension_interop_behavior.py  test_agent_model_selection_behavior.py  test_agent_run_behavior.py  test_context_compaction_behavior.py  test_message_behavior.py  test_session_behavior.py  test_skill_command_behavior.py  test_system_prompt_behavior.py
tests/extensions/: test_agent_extension_api_behavior.py  test_agent_extension_interop_behavior.py  test_extension_loading_runtime_behavior.py  test_extension_runner_behavior.py
tests/llm/: test_anthropic_oauth_behavior.py  test_event_stream_behavior.py  test_factory_resolution_behavior.py  test_model_policy_behavior.py  test_openai_codex_oauth_behavior.py
tests/prompts/: test_prompt_template_behavior.py
tests/runtime/: test_agent_model_selection_behavior.py  (+7 more)
(+126 files in other folders)
